# patrickim

./: .dockerignore  .env.example  .env.local.example  .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md  README.zh-CN.md  deploy-local.sh  deploy.sh  docker-compose.yaml  docker-compose.yml  go.mod  main.go  release-image.sh  signaling.go
deploy/nginx/: nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  tmp.jsx
frontend/src/components/: ChatMessage.jsx  FileProgress.jsx  MessageInput.jsx  RoomSelector.jsx  ThemeProvider.jsx  VideoCall.jsx
frontend/src/components/ui/: checkbox.jsx
frontend/src/constants/: config.js
frontend/src/hooks/: useChatHistory.js  useDiagnostics.js  useFileTransfer.js  usePeerRuntime.js  useRoom.js  useVideoCall.js  useWebSocket.js
frontend/src/utils/: fileUtils.js  formatters.js
src/: app.rs  config.rs  diagnostics.rs  ice.rs  main.rs  routes.rs  session.rs  static_files.rs  types.rs  utils.rs  ws.rs
