[package]
name = "patrick-im-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["http1", "json", "macros", "ws"] }
base64 = "0.22.1"
cookie = "0.18.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
hmac = "0.12.1"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
